--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
     "name": "Pyrone",
-    "logo": "https://te.legra.ph/file/07d39b85c6cea32f15259.jpg",
+    "logo": "https://telegra.ph/file/7c88b7dcfe5251eb30522.jpg",
     "keywords": [
       "telegram",
       "bot",
